@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-16T12:16:24Z",
+  "timestamp" : "2025-02-17T00:43:44Z",
   "count_outdated" : 2926,
   "uniques_outdated" : 946,
-  "count" : 2933,
-  "uniques" : 951,
+  "count" : 2934,
+  "uniques" : 952,
   "views" : [
     {
       "timestamp": "2025-02-05T00:00:00Z",
@@ -34,12 +34,12 @@
     },
     {
       "timestamp": "2025-02-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
