@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 5,
+  "count": 8,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2025-02-05T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2025-02-16T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
